syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "userapi/grpc";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc FindUserByUsername(FindUserByUsernameRequest) returns (FindUserByUsernameResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetAll(GetAllRequest) returns (GetAllResponce);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponce);
  rpc ChangeUsersPassword(ChangeUsersPasswordRequest) returns (google.protobuf.Empty);
  rpc CountUsers(google.protobuf.Empty) returns (CountUsersResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  bytes password = 5;
  string role = 6;
  google.protobuf.Timestamp started_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string role = 3;
    string username = 4;
    string password = 5;
}

message CreateUserResponse {
    int64 id = 1;
}

message FindUserByUsernameRequest {
    string username = 1;
}

message FindUserByUsernameResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string role = 5;
}

message UpdateUserResponse {
  string username = 1;
}

message GetAllRequest {
  int32 page = 1;
}

message GetAllResponce {
  repeated User users = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponce {
  User user = 1;
}

message ChangeUsersPasswordRequest {
  int64 id = 1;
  string password = 2;
}

message CountUsersResponse {
  int64 numberOfUsers = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}